# coinbase_full_orderbook_scraper

./: .gitignore  Cargo.toml  README.md  api_coinbase.py  api_coinbase_pro.py  coinbase_full_scraper.py  depthchart.py  environment.yml  helper_tools.py  main.py  orderbook.py  orderbook_builder.py  orderbook_tests.py  pyproject.toml  webhook_coinbase_full.py  webhook_coinbase_match.py  websockets_coinbase.py  worker_dataframes.py
lvl3_scraper_coinbase/: api_coinbase.py  avl_tree.py  avl_tree_testing.py  coinbase_full_scraper.ps1  coinbase_full_scraper.py  orderbook_builder.py  orderbook_builder_v2.py  orderbook_v2.py  pyo3_test.py  run.py  rust_orderbook_builder.py  websockets_coinbase.py
lvl3_scraper_coinbase/deprecated/: avl_tree_testing.py  depth_chart_mpl.py  orderbook_v2.py  py_orderbook_builder.py  webhook_coinbase_match.py
lvl3_scraper_coinbase/plotting/: depth_chart_mpl.py  depth_chart_mpl_v2.py  performance.py  performance_chart.py  timer_chart_mpl_(deprecated).py
lvl3_scraper_coinbase/tests/: pyo3_test.py
lvl3_scraper_coinbase/tools/: configure_loguru.py  helper_tools.py  run_once_per_interval.py
plotting/: depth_chart_mpl.py  depthchart.py  performance_chart.py  timer_chart.py  timer_chart_mpl.py
src/: avl_tree.rs  avl_tree_py.rs  lib.rs  main.rs  orderbook.rs  orderbook_btree_slab.rs  orderbook_py.rs  websockets.rs
src/deprecated/: avl_tree_stack.rs
src/hide/: b_tree.rs
tools/: GracefulKiller.py  configure_loguru.py  helper_tools.py  mp_queue_OSX.py  run_once_per_interval.py  timer.py
