[package]
name = "rust_orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_orderbook"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
cc-traits = "0.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.22"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
#barter-data = "0.5.6"
#barter-integration = "0.3.4"
#barter = "0.8.2"
#tokio = "1.21.1"
#futures = "0.3.21"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"