[tool.poetry]
name = "Algos"
version = "0.1.0"
description = ""
authors = ["Skelectric"]

[tool.poetry.dependencies]
python = "^3.9"
coinbase = "^2.1.0"
websocket = "^0.2.1"
websockets = "^10.3"
websocket-client = "^1.3.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
